# UR5e-VLM-Object-Detection

./: .dockerignore  .gitignore  CameraCalibration.py  CompleteVisionSystem.py  DOCKER_README.md  Dockerfile  LICENSE  OWLViTDetector.py  ObjectDetection.py  README.md  README_ORGANIZED.md  SpeechCommandProcessor.py  UnifiedVisionSystem.py  WorkSpaceValidator.py  debug_visiontest.py  docker-compose.yml  docker-setup.sh  mapping.txt  paper.tex  setup_environment.sh  start-docker.sh  test_vlm.py  ur5e_vlm_environment.yml  ur_vlm_py310_environment.yml  ~$Assembly-CSharp.csproj
Assets/: UR5e sample.unity
vision/: BehavioralMetrics.py  CMakeLists.txt  CameraCalibration.py  ConstructionClarificationManager.py  ConstructionHaystackNLP.py  ConstructionRAGManager.py  ConstructionRasaNLP.py  ConstructionTTSManager.py  DeepsparceDetection.py  DepthAwareDetector.py  EnhancedConstructionRAG.py  ExperimentalController.py  GraspPointDetector.py  HandEyeCalibrator.py  NASATLXAssessment.py  OWLViTDetector.py  ObjectDetection.py  PHYSICAL_TESTING_CHECKLIST.md  README.md  README_hybrid_ik.md  SharedRAGManager.py  SharedTTSManager.py  SpeechCommandProcessor.py  TrustQuestionnaire.py  UR5eKinematics.py  UnifiedVisionSystem.py  UnifiedVisionSystemSim.py  WorkSpaceValidator.py  accuracy_tester.py  calibrate_eye_in_hand.py  calibrate_hand_eye.py  comprehensive_macos_hri_test.py  create_sim_calibration.py  debug_visiontest.py  environment.yml  example_vlm_integration.py  hybrid_ik_config.yaml  installations.txt  logs.txt  memory_optimization_test_1_1757907784.json  (+20 more)
vision/experiment_data/: participant_P_apprentice.json  participant_P_foreman.json  participant_P_journeyman.json  participant_P_master.json  session_P_journeyman_S1_1757291264.json  session_P_journeyman_S1_1757291767.json  session_P_journeyman_S1_1757292255.json  session_P_journeyman_S1_1757292676.json  session_P_journeyman_S1_1757292859.json  session_P_journeyman_S1_1757292884.json  session_P_journeyman_S1_1757292921.json  session_P_journeyman_S1_1757292997.json  session_P_journeyman_S1_1757293101.json  session_P_journeyman_S1_1757293654.json  session_P_journeyman_S1_1757294108.json  (+25 more)
(+80 files in other folders)
