# package.xml
<?xml version="1.0"?>
<package format="3">
  <name>unified_vision_system</name>
  <version>1.0.0</version>
  <description>Unified Vision System for UR5e with Robotiq gripper</description>
  <maintainer email="iratansh@ualberta.ca">Ishaan Ratanshi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  
  <!-- Simulation dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>robotiq_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>